# NoEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Assets/: Shader Compilation Instruction.txt  imgui.ini
Assets/Scripts/: CameraController.cs  ColorChanger.cs  Rotator.cs  Script Compilation.txt  SinWave.cs  Test.lua
Assets/Scripts/Core/: Input.cs  Material.cs  Script.cs  Time.cs  Transform.cs
Assets/Scripts/Core/Components/: Component.cs  Renderer.cs
Assets/Scripts/Core/Math/: Math.cs  Quaternion.cs  Vector2.cs  Vector3.cs
Assets/Shaders/GLSL/: clownfish.frag  standard.frag  standard.vert  triangle.frag.glsl  triangle.vert  triangle.vert.glsl
Assets/Shaders/SPIR-V/: clownfish.frag.spv  standard.frag.spv  standard.vert.spv  triangle.vert.spv
CMake/Modules/: FindGLFW3.cmake  FindMono.cmake
Core/: CMakeLists.txt  NoEngine.cpp  NoEngine.h
Core/include/Core/: GameObject.h  Layer.h  Mesh.h  Scene.h  Shader.h  ShaderLayout.h  Time.h  Transform.h
Core/include/Core/Assets/: Asset.h  Material.h  Mesh.h  Scene.h  Script.h  Shader.h
Core/include/Core/Components/: AABBCollider.h  Camera.h  Collider.h  Component.h  Light.h  Renderer.h  Rigidbody.h  ScriptedBehaviour.h
Core/include/Core/Input/: InputManager.h  InputMaster.h
Core/include/Core/Modules/: ComponentContainer.hpp  ComponentManager.hpp  GameManager.hpp  GameObjectManager.h  SystemManager.hpp
Core/include/Core/Systems/: CollisionSystem.h  GraphicsSystem.h  PhysicsSystem.h  ScriptSystem.h  System.h
Core/include/Utils/: MemoryPools.hpp
Core/src/: GameObject.cpp  Layer.cpp  Mesh.cpp  Scene.cpp  Time.cpp  Transform.cpp
Core/src/Assets/: Asset.cpp  Material.cpp  Mesh.cpp  Scene.cpp  Shader.cpp
Core/src/Components/: Camera.cpp  Component.cpp  Renderer.cpp  ScriptedBehaviour.cpp
Core/src/Input/: InputMaster.cpp
Core/src/Modules/: ComponentManager.cpp  GameManager.cpp  GameObjectManager.cpp  SystemManager.cpp
Core/src/Systems/: CollisionSystem.cpp  GraphicsSystem.cpp  PhysicsSystem.cpp  ScriptSystem.cpp
Editor/: CMakeLists.txt
Editor/include/Editor/: Editor.h  GameObjectEditor.hpp  SceneEditors.h
Editor/include/Editor/Components/: CameraEditor.hpp  ComponentEditorBase.hpp
Editor/src/Editor/: Editor.cpp  SceneEditors.cpp
Graphics/: CMakeLists.txt
Graphics/include/Deprecated/Graphics/: Buffer.h  CommandBuffer.h  DeviceContext.h  Framebuffer.h  PipelineState.h  RenderPass.h  Shader.h  SwapChain.h  Texture.h  Window.h
Graphics/include/Deprecated/Graphics/OpenGL/: GLBuffer.h  GLPipelineState.h  GLShader.h  GLWindow.h
Graphics/include/Deprecated/Graphics/Vulkan/: VKFramebuffer.h  VKPipelineState.h  VKRenderDevice.h  VKShader.h  VKSwapChain.h  VKWindow.h
Graphics/include/Graphics/: Buffer.h  DeviceContext.h  DeviceObject.h  GraphicsContext.h  PipelineState.h  RenderDevice.h  Shader.h  SwapChain.h  VulkanApplication.h  Window.h
Graphics/include/Graphics/OpenGL/: GLBuffer.h  GLCommandBuffer.h  GLRenderDevice.h  GLShader.h  GLWindow.h
Graphics/include/Graphics/Vulkan/: VKPipelineState.h  VKRenderDevice.h  VKShader.h  VKSwapChain.h  VKWindow.h  VulkanBuffer.h  VulkanContext.h  VulkanImGui.h  VulkanImGuiRenderer.h  VulkanMeshRenderer.h  VulkanRenderer.h  VulkanSwapchain.h  VulkanUtils.hpp  VulkanWindow.h
Graphics/include/Graphics/VulkanRendering/: VulkanApplication.h
Graphics/include/Graphics/imgui/: imgui_impl_vulkan.h
Graphics/src/: GraphicsContext.cpp  VulkanApplication.cpp  VulkanImpl.cpp
Graphics/src/Deprecated/OpenGL/: GLBuffer.cpp  GLCommandBuffer.cpp  GLPipelineState.cpp  GLShader.cpp  GLWindow.cpp
Graphics/src/Deprecated/Vulkan/: VKSwapChain.cpp  VKWindow.cpp
Graphics/src/OpenGL/: GLRenderDevice.cpp  GLShader.cpp  GLWindow.cpp
Graphics/src/Vulkan/: VKFramebuffer.cpp  VKPipelineState.cpp  VKRenderDevice.cpp  VKShader.cpp  VKSwapChain.cpp  VKWindow.cpp  VulkanBuffer.cpp  VulkanContext.cpp  VulkanImGui.cpp  VulkanImGuiRenderer.cpp  VulkanMeshRenderer.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp  VulkanWindow.cpp
Graphics/src/imgui/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp
Math/: CMakeLists.txt
Math/include/Math/: Base.h  Bounds.h  Math.h  Matrix4x4.h  Pose.h  Quaternion.h  Rect.h  Util.h  Vector2.h  Vector3.h  Vector4.h
Math/src/: Bounds.cpp  Matrix4x4.cpp  Quaternion.cpp  Rect.cpp  Util.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Scripting/: CMakeLists.txt
Scripting/include/Scripting/: Environment.h  InternalCall.h  Runtime.h  ScriptInstance.h  Scripting.h
Scripting/src/: Environment.cpp  InternalCall.cpp  Runtime.cpp  ScriptInstance.cpp  Scripting.cpp
